--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,26 @@
 
+.custom-gradient {
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(229, 229, 229, 1) 0%,
+    rgba(255, 255, 255, 1) 20%,
+    rgba(251, 251, 242, 1) 45%,
+    rgba(255, 221, 199, 1) 70%,
+    rgba(255, 195, 195, 1) 80%,
+    rgba(177, 237, 255, 1) 100%
+  );
+}
 
+@media only screen and (max-width: 767px) {
+  .custom-gradient {
+    background-image: linear-gradient(
+      to bottom right,
+      rgba(229, 229, 229, 1) 0%,
+      rgba(255, 255, 255, 1) 20%,
+      rgba(251, 251, 242, 1) 45%,
+      rgba(255, 221, 199, 1) 70%,
+      rgba(255, 215, 215, 1) 80%, /* Lighter pink for mobile */
+      rgba(177, 237, 255, 1) 100%
+    );
+  }
+}
